[DLG-373] 쪽지 삭제 API를 개발한다. (#224)
Signed-off-by: Jun <92818747+devjun10@users.noreply.github.com>
Co-authored-by: JiYoul Choi <beatmejy@naver.com>